--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sc-login:build"
+            "browserTarget": "sc-login:build",
+            "proxyConfig": "proxy.config.ts"
           },
           "configurations": {
             "production": {
@@ -123,6 +124,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "sc-login"
 }
